tests/pos/i6683.scala
trait A{
  def m: [T] => (x:Int) => Int
}
