tests/neg/java-wrong-bounds/D_1.scala
class A

class D[T >: A](v: T) {
  def getV(): T = v
}
